Fixes stretched images and section headings

--- a/src/styles/_mediaQueries.scss
+++ b/src/styles/_mediaQueries.scss
@@ -76,20 +76,26 @@
   }
 
   .arrow {
-    display: none;
+    // display: none;
+    // top: 0;
+    top: 30px;
     h4 {
-      letter-spacing: 20px;
+      color: $opaque-color;
+      letter-spacing: 20px !important;
     }
   }
 
-  .lowered-arrow {
-    display: block;
-  }
+  // .lowered-arrow {
+  //   display: block;
+  //   h4 {
+  //     letter-spacing: 20px;
+  //   }
+  // }
 }
 
 @media (max-width: 820px) {
-  .lowered-arrow h4 {
-    font-size: 3.5rem;
+  .arrow h4 {
+    font-size: 3.5rem !important;
   }
   .blurb-div {
     flex-direction: column;
@@ -113,10 +119,13 @@
   nav {
     height: 60px;
   }
-  .lowered-arrow h4 {
-    font-size: 2rem;
-    letter-spacing: 5px;
-    margin-top: 50px;
+  // .lowered-arrow {
+  //   display: block;
+  // }
+  .arrow h4 {
+    font-size: 2.5rem !important;
+    letter-spacing: 5px !important;
+    // margin-top: 50px;
   }
   .name-mobile {
     font-size: 1.5rem;
