--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -47,13 +47,16 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   padding: 30px 0;
   img {
     width: 50%;
+    height: auto;
     max-width: 500px;
     padding: 5px;
     border-radius: 15px;
     transition: all 0.5s ease;
+    object-fit: cover;
   }
 }
 
@@ -61,6 +64,7 @@
   width: 400px;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding-top: 30px;
   img {
     width: 60%;
